force-app/main/default/objects/accc_Org_Events__b/accc_Org_Events__b.object-meta.xml
<CustomObject>
    <label>Org Event</label>
    <pluralLabel>Org Events</pluralLabel>
</CustomObject>