force-app/main/default/objects/accc_Org_Events__b/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <label>Event Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>