force-app/main/default/objects/accc_Org_Events__b/fields/Event_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_Month__c</fullName>
    <label>Event Month</label>
    <required>true</required>
    <type>Number</type>
    <scale>0</scale>
    <precision>2</precision>
</CustomField>