force-app/main/default/objects/accc_Org_Events__b/fields/Event_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_Year__c</fullName>
    <label>Event Year</label>
    <required>true</required>
    <type>Number</type>
    <scale>0</scale>
    <precision>4</precision>
</CustomField>