force-app/main/default/objects/accc_Org_Events__b/fields/Event_Json__c.field-meta.xml
<CustomField>
    <fullName>Event_Json__c</fullName>
    <label>Event JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>