force-app/main/default/objects/accc_Org_Events__b/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <length>254</length>
    <required>true</required>
    <type>Text</type>
</CustomField>