force-app/main/default/objects/accc_Org_Events__b/fields/Number_Of_Events__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Events__c</fullName>
    <label>Number of Events</label>
    <required>true</required>
    <type>Number</type>
    <scale>0</scale>
    <precision>10</precision>
</CustomField>