force-app/main/default/objects/accc_Org_Events__b/fields/Operation_Ids__c.field-meta.xml
<CustomField>
    <fullName>Operation_Ids__c</fullName>
    <label>Operation Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>