force-app/main/default/objects/accc_Org_Events__b/fields/Replay_Ids__c.field-meta.xml
<CustomField>
    <fullName>Replay_Ids__c</fullName>
    <label>ReplayIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>